--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 BASE_URL_DEV1=https://3616-122-53-220-107.ngrok.io/api/v1/
-BASE_URL_DEV=https://79d3-203-82-37-210.ngrok.io/api/v1/
+BASE_URL_DEV=https://38f6-122-53-220-107.ngrok.io/api/v1/
