--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL_DEV1=https://3616-122-53-220-107.ngrok.io/api/v1/
-BASE_URL_DEV=https://4b48-130-105-81-42.ngrok.io/api/v1/
+BASE_URL_DEV=https://b1cc-122-53-220-107.ngrok.io/api/v1/
+BASE_URL_DEV1=http://localhost:8000/api/v1/
