--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL_DEV=https://5e91-122-53-220-107.ngrok.io/api/v1/
+BASE_URL_DEV=https://5fee-122-53-220-107.ngrok.io/api/v1/
 BASE_URL_DEV1=http://localhost:8000/api/v1/
