--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-BASE_URL_DEV=https://b9ad-203-82-37-210.ngrok.io/api/v1/
+BASE_URL_DEV=https://d95d-203-82-37-210.ngrok.io/api/v1/
 BASE_URL_DEV1=http://localhost:8000/api/v1/
-s=
