--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL_DEV=https://6a8e-122-53-220-107.ngrok.io/api/v1/
+BASE_URL_DEV=https://5a96-203-82-37-210.ngrok.io/api/v1/
 BASE_URL_DEV1=http://localhost:8000/api/v1/
