--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL_DEV=https://5a96-203-82-37-210.ngrok.io/api/v1/
+BASE_URL_DEV=https://e98c-2001-fd8-1a86-d59-8d68-730c-18ca-103d.ngrok.io/api/v1/
 BASE_URL_DEV1=http://localhost:8000/api/v1/
